--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<a href="https://otp.landian.vip/zh-cn/" target="_blank">Office tool Plus</a><br>
+<!DOCTYPE html>
+<html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-16">
+          <title>KYRIEGBW</title>
+          <style type="text/css"></style>
+    <head>
+        <meta charset="utf-8" />
+        <font size="500"
+
+    </head>
+    <body bgcolor="#B4AF97">
+
+       <font color="#393A37">KYRIEGBW</font>
+
+       <table width = "300" border="5"></table>
+
+       <tr></tr>
+
+       <a href="https://otp.landian.vip/zh-cn/" target="_blank">Office tool Plus</a><br>
+
+       <a href="https://docs.qq.com/desktop/?u=2128abc05a43443b8bbd15c85e4baa6d" target="_blank">Tencent</a><br>
+
+       <a href="https://www.douyin.com/" target="_blank">DouYin</a><br>
+
+       <a href="https://music.163.com/" target="_blank">Music</a><br>
+
+      <a href="http://www.baidu.com" target="_blank" >Baidu</a><br>
+
+    </body>
+</html>
