--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 
       <a href="http://www.baidu.com" target="_blank" >百度</a><br>
         
-      <a href="http://www.baidu.com" target="_blank" >云税务</a><br>
+      <a href="https://edu.netinnet.cn/" target="_blank" >云税务</a><br>
     </body>
 </html>
