--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
       <a href="http://www.baidu.com" target="_blank" >百度</a><br>
         
       <a href="https://edu.netinnet.cn/" target="_blank" >云税务</a><br>
+        
+      <a href="http://172.16.21.203:5000/fstjkptgl/" target="_blank" >福斯特</a><br>
     </body>
 </html>
