--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
       <a href="https://edu.netinnet.cn/" target="_blank" >云税务</a><br>
         
       <a href="http://172.16.21.203:5000/fstjkptgl/" target="_blank" >福斯特</a><br>
+        
+      <a href="https://pan.baidu.com/" target="_blank" >百度网盘</a><br>
     </body>
 </html>
