--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
        <a href="https://music.163.com/" target="_blank">Music</a><br>
 
       <a href="http://www.baidu.com" target="_blank" >Baidu</a><br>
-
+        
+      <a href="http://172.16.21.203:5000/fstjkptgl/" target="_blank" >Fst</a><br>
+        
+      <a href="http://https://edu.netinnet.cn/" target="_blank" >Yunshuiwu</a><br>
     </body>
 </html>
