--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
         
       <a href="http://172.16.21.203:5000/fstjkptgl/" target="_blank" >Fst</a><br>
         
-      <a href="http://https://edu.netinnet.cn/" target="_blank" >Yunshuiwu</a><br>
+      <a href="https://edu.netinnet.cn/" target="_blank" >Yunshuiwu</a><br>
     </body>
 </html>
