--- a/index.html
+++ b/index.html
@@ -82,5 +82,7 @@
       <a href="http://172.16.21.203:5000/fstjkptgl/" target="_blank" >Fst</a><br>
         
       <a href="https://edu.netinnet.cn/" target="_blank" >Yunshuiwu</a><br>
+        
+      <a href="https://edu.netinnet.cn/" target="_blank" >GITHUB</a><br>
     </body>
 </html>
