--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
         
       <a href="https://edu.netinnet.cn/" target="_blank" >Yunshuiwu</a><br>
         
-      <a href="https://edu.netinnet.cn/" target="_blank" >GITHUB</a><br>
+      <a href="https://github.com/KYRIEGBW/KYRIEGBW.github.io" target="_blank" >GITHUB</a><br>
     </body>
 </html>
