--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Document</title>
-
 </head>
 
 <body>
@@ -37,8 +36,7 @@
 
             var second=now.getSeconds()
 
-            return `${hour}:${minute}:${second}`
-
+            return `$${hour}:$${minute}:$${second}`
         }
 
         setInterval(() => {
