--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             var second=now.getSeconds()
 
-            return `${hour}:`${minute}:`${second}`
+            return `${hour}:${minute}:${second}`
         }
 
         setInterval(() => {
