--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <font size="500"
 
     </head>
-    <body bgcolor="#B4AF97">
+    <body bgcolor="#F18D70">
 
        <font color="#393A37">KYRIEGBW</font>
 
