--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <font size="500"
 
     </head>
-    <body bgcolor="#CE8892">
+    <body bgcolor="#55A396">
 
        <font color="#393A37">KYRIEGBW</font>
 
