--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <meta charset="utf-8" />
         <font size="500"
     </head>
-    <body bgcolor="#B4AF97">
+    <body bgcolor="#EAEAEF">
 
        <font color="#393A37">KYRIEGBW</font>
 
