--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
        <a href="https://docs.qq.com/desktop/?u=2128abc05a43443b8bbd15c85e4baa6d" target="_blank">Tencent</a><br>
         
-           <a href="https://cn.piliapp.com/time/" target="_blank">TIME</a><br>
+           <a href="https://www.idcd.com/tool/time/60" target="_blank">TIME</a><br>
         
        <a href="https://www.douyin.com/" target="_blank">DouYin</a><br>
 
