--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 
        <a href="https://music.163.com/" style="text-decoration: none;"
        target="_blank">网易云</a><br>
+       
+         <a href="https://y.qq.com/" style="text-decoration: none;"
+       target="_blank">QQMUSIC</a><br>
 
       <a href="http://www.baidu.com" style="text-decoration: none;"
       target="_blank" >Baidu</a><br>
