--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>Aijinyan</title>
+    <title>KYRIEGBW</title>
     <style type="text/css">
     body {
         background-color: #153C46;
