--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <td height="25%" width="25%"><div align="center" class="11"><a href="https://edu.netinnet.cn/student/index.html#/home" class="内容">Yuns</a></div></td>
 
-    <td height="25%" width="25%"><div align="center" class="11"><a href="https://qb.99onez.com/questionbank/toResLogin?scode=whez" class="内容">99wang</a></div></td>
+    <td height="25%" width="25%"><div align="center" class="11"><a href="https://yiyan.baidu.com/welcome" class="内容">wenAI</a></div></td>
     
     <td height="25%" width="25%"><div align="right"><a href="https://github.com/" class="内容">Github</a></div></td>
 
