--- a/index.html
+++ b/index.html
@@ -3,18 +3,32 @@
     <meta charset="utf-8">
     <title>KYRIEGBW</title>
     <style type="text/css">
-    body {
-        background-color: #3D3B4F;
-    }
+
+		body {
+			background-image: url("BG.JPG");
+			background-size: cover;
+		}
+		.container {
+			text-align: center;
+			margin-top: 100px;
+		}
+		.link {
+			display: inline-block;
+			margin: 20px;
+			font-size: 24px;
+			color: white;
+			text-decoration: none;
+		}
+    
     .标题 {
         font-family: "Mistral";
         font-size: 250px;
         color:#F9B400;
     }
     .内容 {
-        font-family: "方正粗黑宋简体";
+        font-family: "Forte";
         font-size: 120px;
-        color: #F9906F;
+        color: #00FEF8;
         text-decoration: none;
     }
     </style>
@@ -27,7 +41,7 @@
 
    <tbody><tr>
 
-     <td colspan="10" class="标题" height="50%"><div align="center">KYRIEGBW.11</td>
+     <td colspan="10" class="标题" height="50%"><div align="center">KYRIEGBW</td>
 
    </tr>
    <tr>
