--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style type="text/css">
 
 		body {
-			background-image: url("BG.png");
+			background-image: url("BG.jpg");
 			background-size: cover;
 		}
 		.container {
