--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style type="text/css">
 
 		body {
-			background-image: url("BG.jpg");
+			background-image: url("BG.JPG");
 			background-size: cover;
 		}
 		.container {
@@ -28,7 +28,7 @@
     .内容 {
         font-family: "Forte";
         font-size: 120px;
-        color: #00FEF8;
+        color: #F9B400;
         text-decoration: none;
     }
     </style>
