--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style type="text/css">
 
 		body {
-			background-image: url("BG.JPG");
+			background-image: url("背景.JPG");
 			background-size: cover;
 		}
 		.container {
