--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style type="text/css">
 
 		body {
-			background-image: url("11.JPG");
+			background-image: url("11.jpg");
 			background-size: cover;
 		}
 		.container {
