--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
      <td height="25%" width="25%"><div align="right" class="11"><a href="https://otp.landian.vip/zh-cn/" class="内容">Office</a></div></td>
 
-   </tr>
-   <tr>
+   </tr> 
+   <tr> 
   
-    <td height="25%" width="25%"><div align="left" class="11"><a href="http://exam.chanjet.com/portal/login.jsp" class="内容">Chanjet</a></div></td>
+    <td height="25%" width="25%"><div align="left" class="11"><a href="11.xlsx" download class="内容">KYRIE</a></div></td>
 
     <td height="25%" width="25%"><div align="center" class="11"><a href="https://edu.netinnet.cn/student/index.html#/home" class="内容">Yuns</a></div></td>
 
